# python-haystack

./: setup.py
docs/: installation.rst
pypi/: README.rst  setup.cfg
