[metadata]
name = haystack
version = 0.43
description = "'haystack' is now 'python-haystack'"
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Loic Jaquemet
author_email = loic.jaquemet+python@gmail.com
url = http://packages.python.org/haystack/
classifiers =
    Development Status :: 7 - Inactive

[options]
install_requires = python-haystack